; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_debugfs.c_mlx5_debug_qp_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_debugfs.c_mlx5_debug_qp_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_core_dev = type { i32 }
%struct.mlx5_core_qp = type { i64 }

@mlx5_debugfs_root = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mlx5_debug_qp_remove(%struct.mlx5_core_dev* %0, %struct.mlx5_core_qp* %1) #0 {
  %3 = alloca %struct.mlx5_core_dev*, align 8
  %4 = alloca %struct.mlx5_core_qp*, align 8
  store %struct.mlx5_core_dev* %0, %struct.mlx5_core_dev** %3, align 8
  store %struct.mlx5_core_qp* %1, %struct.mlx5_core_qp** %4, align 8
  %5 = load i32, i32* @mlx5_debugfs_root, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  br label %18

8:                                                ; preds = %2
  %9 = load %struct.mlx5_core_qp*, %struct.mlx5_core_qp** %4, align 8
  %10 = getelementptr inbounds %struct.mlx5_core_qp, %struct.mlx5_core_qp* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %8
  %14 = load %struct.mlx5_core_qp*, %struct.mlx5_core_qp** %4, align 8
  %15 = getelementptr inbounds %struct.mlx5_core_qp, %struct.mlx5_core_qp* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = call i32 @rem_res_tree(i64 %16)
  br label %18

18:                                               ; preds = %7, %13, %8
  ret void
}

declare dso_local i32 @rem_res_tree(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
